# navmesh

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
build_vs/: NavMesh.sln  demo.vcxproj  demo.vcxproj.filters  source.vcxproj  source.vcxproj.filters  tests.vcxproj
demo/: CMakeLists.txt  demo.cpp  demo.rc  resource.h
include/navmesh/: path_finder.h  segment.h
source/: CMakeLists.txt  cone_of_vision.cpp  cone_of_vision.h  path_finder.cpp  path_finder.h  point.cpp  point.h  pointf.h  polygon.cpp  polygon.h  segment.cpp  segment.h
src/: CMakeLists.txt  cone_of_vision.cpp  path_finder.cpp  point.cpp  polygon.cpp  segment.cpp
test/: CMakeLists.txt  tests.cpp
tests/: CMakeLists.txt  tests.cpp
